fix aspect-radio not working on safari

--- a/apps/dotcms-ui/src/app/portlets/dot-edit-page/components/dot-content-palette/dot-content-palette.component.scss
+++ b/apps/dotcms-ui/src/app/portlets/dot-edit-page/components/dot-content-palette/dot-content-palette.component.scss
@@ -60,8 +60,7 @@
         display: grid;
         cursor: grab;
         color: $black;
-        padding: 0 0.25rem;
-        aspect-ratio: 1/0.8;
+        padding: 14% 0.25rem;
         align-content: center;
         justify-items: center;
 
